--- a/pages/students/student_page.html
+++ b/pages/students/student_page.html
@@ -14,7 +14,7 @@
                 let resTextSession = await response.json();
 
                 if (resTextSession.type === "student") {
-                    if (resTextSession.id !== locId) {
+                    if (resTextSession.id !== parseInt(locId, 10)) {
                         window.location.href = `/student/${resTextSession.id}`;
                     }
                     document.getElementById("deleteButton").hidden = true;
@@ -27,6 +27,7 @@
                 }
 
                 if (resTextSession.type === "admin") {
+                    document.getElementById("addTestButton").hidden = true;
                     document.getElementById("logOutButton").hidden = true;
                 }
 
@@ -48,8 +49,6 @@
                     for (let i = 0; i < resText.length; i++) {
                         let response2 = await fetch(`/professor/${resText[i].Professor_id}/test/${resText[i].Test_id}/info.json`);
                         let resText2 = await response2.json();
-                        let response3 = await fetch(`/professor/${resText[i].Created_by_id}/info.json`);
-                        let resText3 = await response3.json();
 
                         let created_by;
                         if (resText[i].Created_by_id === 0) {
@@ -58,6 +57,9 @@
                             else
                                 created_by = "Студентом";
                         } else {
+                            let response3 = await fetch(`/professor/${resText[i].Created_by_id}/info.json`);
+                            let resText3 = await response3.json();
+
                             if (resTextSession.type === "student")
                                 created_by = resText3.First_name + " " + resText3.Second_name;
                             else {
@@ -65,7 +67,7 @@
                                     created_by = "Мной";
                             }
                         }
-                        if (resText[i].Number_of_correct_answers !== "") {
+                        if (resText[i].Number_of_correct_answers !== null) {
                             if (f1) {
                                 document.getElementById('solvedTestsTable').hidden = false;
                                 solvedTestsLines.innerHTML = "";
@@ -117,7 +119,10 @@
 
                 let backButton = document.getElementById('backButton');
                 backButton.onclick = function () {
-                    window.location.href = `/actions`;
+                    if (resTextSession.type === "student" && resTextSession.id === parseInt(locId, 10))
+                        window.location.href = `/actions`;
+                    else
+                        window.location.href = `/students`;
                 };
 
                 let deleteButton = document.getElementById('deleteButton');
@@ -148,7 +153,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Студент </h2>
+    <h2> Страница студента </h2>
     <form name="student">
         <div style="margin-bottom: 5px">
             <label id="firstName"></label> <label id="secondName"></label>
@@ -156,7 +161,7 @@
         <div style="margin-bottom: 10px">
             <label id="group"></label>
         </div>
-        <table bgcolor="#f0f8ff" hidden id="solvedTestsTable" style="text-align:center; margin-bottom: 10px">
+        <table bgcolor="beige" hidden id="solvedTestsTable" style="text-align:center; margin-bottom: 10px">
             <thead>
             <tr>
                 <th>Предмет</th>
@@ -169,7 +174,7 @@
             <tbody id="solvedTestsLines">
             </tbody>
         </table>
-        <table bgcolor="#f0f8ff" hidden id="testsTable" style="text-align:center; margin-bottom: 15px">
+        <table bgcolor="beige" hidden id="testsTable" style="text-align:center; margin-bottom: 10px">
             <thead>
             <tr>
                 <th>Предмет</th>
@@ -180,7 +185,7 @@
             <tbody id="testsLines">
             </tbody>
         </table>
-        <div style="margin-bottom: 5px">
+        <div style="margin-bottom: 15px">
             <input id="addTestButton" type="button" value="Добавить тест"/>
         </div>
         <div style="margin-bottom: 10px">
