--- a/pages/students/student_test_page.html
+++ b/pages/students/student_test_page.html
@@ -15,7 +15,7 @@
                 let response = await fetch(`/session/info.json`);
                 let resTextSession = await response.json();
 
-                if (resTextSession.type === "student" && resTextSession.id !== locId) {
+                if (resTextSession.type === "student" && resTextSession.id !== parseInt(locId, 10)) {
                     window.location.href = `/student/${resTextSession.id}`;
                 }
 
@@ -28,7 +28,7 @@
 
                 document.getElementById("number_of_questions").innerText = resTextTest.Number_of_questions_in_test;
                 if (resTextSession.type === "student") {
-                    if (resTextTest.Created_by_id !== "0") {
+                    if (resTextTest.Created_by_id !== 0) {
                         document.getElementById("deleteButton").hidden = true;
                     }
                 }
@@ -50,7 +50,7 @@
                 response = await fetch(`/student/${locId}/test/${locCode}/${locAttempt}/questions/info.json`);
                 if (response.ok) {
                     resText = await response.json();
-                    if (resTextTest.Number_of_correct_answers !== "") {
+                    if (resTextTest.Number_of_correct_answers !== null) {
                         document.getElementById('questionsTable').hidden = false;
                         let questionsButtons = document.getElementById('questions');
                         questionsButtons.innerHTML = "";
@@ -59,11 +59,11 @@
                             let resText2 = await response.json();
                             response = await fetch(`/student/${locId}/test/${locCode}/${locAttempt}/question/${resText[i].Question_id}/info.json`);
                             let resText3 = await response.json();
-                            let color = resText3.Is_correct_answer_to_question ? "green" : "red";
-                            questionsButtons.innerHTML += "<tr>\n" +
+                            let color = resText3.Is_correct_answer_to_question === 1 ? "lightgreen" : "lightpink";
+                            questionsButtons.innerHTML += `<tr  bgcolor="${color}">\n` +
                                 "                <td>\n" +
-                                `                    <span style="color: ${color}; "><input type='button' value='${resText2.Question_text}'\n` +
-                                `                           onclick="window.location.href = '/student/${locId}/test/${locCode}/${locAttempt}/question/${resText[i].Question_id}'"/></span>\n` +
+                                `                    <input type='button' value='${resText2.Question_text}'\n` +
+                                `                           onclick="window.location.href = '/student/${locId}/test/${locCode}/${locAttempt}/question/${resText[i].Question_id}'"/>\n` +
                                 "                </td>\n" +
                                 "            </tr>";
                         }
@@ -118,7 +118,7 @@
             <label>Процент успешного выполнения:</label> <label id="percent"></label>
         </div>
         <div style="margin-bottom: 5px">
-            <label>Количество вопросов в тесте: </label><label id="number_of_questions"></label>
+            <label>Количество вопросов в тесте:</label><label id="number_of_questions"></label>
         </div>
         <div style="margin-bottom: 5px">
             <input id="deleteButton" type="button" value="Удалить"/>
@@ -127,7 +127,7 @@
         <div style="margin-bottom: 5px">
             <input id="backButton" type="button" value="Назад"/>
         </div>
-        <table bgcolor="#f0f8ff" hidden id="questionsTable" style="text-align:center">
+        <table bgcolor="beige" hidden id="questionsTable" style="text-align:center">
             <thead>
             <tr>
                 <th>Вопросы</th>
